src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>fxProjectedGrossSales__c</fullName>
        <formula>(ProjectedGrossSales__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedGross__c</fullName>
        <formula>(ProjectedGross__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedNetGross__c</fullName>
        <formula>(ProjectedNetGross__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Net Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedNetPot__c</fullName>
        <formula>(ProjectedNetPot__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Net Pot (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedSplitPoint__c</fullName>
        <formula>(ProjectedSplitPoint__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Split Point (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedToBeSharedAmount__c</fullName>
        <formula>(ProjectedToBeSharedAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected To Be Shared Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxReservedNetGross__c</fullName>
        <formula>(ReservedNetGross__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Reserved Net Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSelloutAverageTicketPrice__c</fullName>
        <formula>(SelloutAverageTicketPrice__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Sellout Average Ticket Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSelloutGrossSales__c</fullName>
        <formula>(SelloutGrossSales__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Sellout Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementAdjustedGross__c</fullName>
        <formula>(SettlementAdjustedGross__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Adjusted Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementArtistInclusiveGuarantee__c</fullName>
        <formula>(SettlementArtistInclusiveGuarantee__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settle Artist Inclusive Guar (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementArtistShare__c</fullName>
        <formula>(SettlementArtistShare__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Artist Share (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementArtistSuppliedSL__c</fullName>
        <formula>(SettlementArtistSuppliedSL__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Artist Supplied S&amp;L (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementAverageTicketPrice__c</fullName>
        <formula>(SettlementAverageTicketPrice__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Average Ticket Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementDeductions__c</fullName>
        <formula>(SettlementDeductions__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Deductions (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementGrossSales__c</fullName>
        <formula>(SettlementGrossSales__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementGross__c</fullName>
        <formula>(SettlementGross__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementGuarantee__c</fullName>
        <formula>(SettlementGuarantee__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Guarantee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementHouseNut__c</fullName>
        <formula>(SettlementHouseNut__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement House Nut (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementNetGross__c</fullName>
        <formula>(SettlementNetGross__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Net Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementNetPot__c</fullName>
        <formula>(SettlementNetPot__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Net Pot (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementOtherTalentAmount__c</fullName>
        <formula>(SettlementOtherTalentAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Other Talent Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementPaidTickets__c</fullName>
        <formula>(SettlementPaidTickets__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Paid Tickets (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementPlatinumLift__c</fullName>
        <formula>(SettlementPlatinumLift__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Platinum Lift (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementPromoterEarnings__c</fullName>
        <formula>(SettlementPromoterEarnings__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Promoter Earnings (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementSplitPoint__c</fullName>
        <formula>(SettlementSplitPoint__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Split Point (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementToBeSharedAmount__c</fullName>
        <formula>(SettlementToBeSharedAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement To Be Shared Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementTotalSupportActExpenses__c</fullName>
        <formula>(SettlementTotalSupportActExpenses__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Tot Support Act Exp (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTalentOverhead__c</fullName>
        <formula>(TalentOverhead__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Talent Overhead (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalGuaranteesOverhead__c</fullName>
        <formula>(TotalGuaranteesOverhead__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Guarantees &amp; Overhead (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalSupportActExpenses__c</fullName>
        <formula>(TotalSupportActExpenses__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Support Act Expenses (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All_Events</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Artists__c</columns>
        <columns>EventFirstDate__c</columns>
        <columns>Venue__c</columns>
        <columns>Promoter__c</columns>
        <columns>Office__c</columns>
        <columns>Status__c</columns>
        <columns>RecordTypeName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Events</label>
    </listViews>
    <listViews>
        <fullName>ArtistHold</fullName>
        <columns>NAME</columns>
        <columns>EventFirstDate__c</columns>
        <columns>EventLastDate__c</columns>
        <columns>Artists__c</columns>
        <columns>EventName__c</columns>
        <columns>Venue__c</columns>
        <columns>Status__c</columns>
        <columns>Promoter__c</columns>
        <columns>Office__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event__c.Hold</value>
        </filters>
        <filters>
            <field>Promoter__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Office__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Artist Hold</label>
    </listViews>
    <listViews>
        <fullName>ConfirmedDeals</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Venue__c</columns>
        <columns>Status__c</columns>
        <columns>Promoter__c</columns>
        <columns>Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>Confirmed Deals</label>
    </listViews>
    <listViews>
        <fullName>DealsInProgress</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Venue__c</columns>
        <columns>Office__c</columns>
        <columns>Promoter__c</columns>
        <columns>EventLastDate__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Pending Unlikely,Pending Likely</value>
        </filters>
        <label>Deals in Progress</label>
    </listViews>
    <nameField>
        <displayFormat>Evt-{000000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <recordTypes>
        <fullName>BuySell</fullName>
        <active>true</active>
        <description>Event where Live Nation is not managing production but contractually supporting</description>
        <label>Buy Sell</label>
    </recordTypes>
    <recordTypes>
        <fullName>Festival</fullName>
        <active>true</active>
        <description>All-day or multi-day event featuring multiple artists usually with multiple stages</description>
        <label>Festival</label>
    </recordTypes>
    <recordTypes>
        <fullName>GospelBrunch</fullName>
        <active>true</active>
        <description>House of Blues promoted event for Sunday gospel performance</description>
        <label>Gospel Brunch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hold</fullName>
        <active>true</active>
        <description>Tentative placeholder for potential event</description>
        <label>Hold</label>
    </recordTypes>
    <recordTypes>
        <fullName>PromotedShow</fullName>
        <active>true</active>
        <description>Local event or part of a tour and fully managed by Live Nation</description>
        <label>Promoted Show</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental</fullName>
        <active>true</active>
        <description>Event not managed by Live Nation</description>
        <label>Rental</label>
    </recordTypes>
    <recordTypes>
        <fullName>TBDEvents</fullName>
        <active>true</active>
        <description>Used for TBD Events</description>
        <label>TBD Events</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LNE_CancelledDraftStatus</fullName>
        <active>true</active>
        <description>Event status can only change to certain values if it is in cancelled status.</description>
        <errorConditionFormula>OR(
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;),
NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;),
NOT(ISPICKVAL(Status__c, &quot;Draft&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;),
NOT(ISPICKVAL(Status__c, &quot;Pending Likely&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;),
NOT(ISPICKVAL(Status__c, &quot;Pending Unlikely&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;),
NOT(ISPICKVAL(Status__c, &quot;Confirmed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;),
NOT(ISPICKVAL(Status__c, &quot;Postponed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;),
NOT(ISPICKVAL(Status__c, &quot;Flash Complete&quot;))

)

)))))))
&amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status can only move to: Draft, Pending Unlikely, Pending Likely, Confirmed, Postponed, or Flash Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_ConfirmedDraftStatus</fullName>
        <active>true</active>
        <description>Event status can only move to certain values after confirmed status.</description>
        <errorConditionFormula>OR(
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Confirmed&quot;),
ISPICKVAL(Status__c, &quot;Artist Passed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Confirmed&quot;),
ISPICKVAL(Status__c, &quot;LNE Passed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Confirmed&quot;),
ISPICKVAL(Status__c, &quot;Inactive&quot;))

)

&amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>If draft status is confirmed, can only move the following status: Draft, Pending Likely, Pending Unlikely, Cancelled, Postponed, Flash Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EventDraftStatus</fullName>
        <active>true</active>
        <description>Event status can only move to certain values after draft status.</description>
        <errorConditionFormula>OR(
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Draft&quot;),
    ISPICKVAL(Status__c, &quot;Confirmed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Draft&quot;),
    ISPICKVAL(Status__c, &quot;Flash Complete&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Draft&quot;),
    ISPICKVAL(Status__c, &quot;Artist Passed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Draft&quot;),
    ISPICKVAL(Status__c, &quot;LNE Passed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Draft&quot;),
    ISPICKVAL(Status__c, &quot;Postponed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Draft&quot;),
    ISPICKVAL(Status__c, &quot;Cancelled&quot;))


)

&amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>If event status is draft, can only move to pending likely, pending unlikely, or inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EventOfficeAccess</fullName>
        <active>true</active>
        <description>Checks to see if the user has authorized access to the related office/division of the event in order to modify the event.</description>
        <errorConditionFormula>!CONTAINS( &apos;,&apos; +  $User.OfficeAccess__c + &apos;,&apos;,
         &apos;,&apos; + Office__r.OfficeID__c + &apos;,&apos;)

&amp;&amp; !$Setup.GeneralSettings__c.GlobalDataAdministrator__c
&amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;

/* Financial Calculator is running and making updates */
!$Setup.GeneralSettings__c.BypassPBFlow__c</errorConditionFormula>
        <errorMessage>You do not have authorized access to the events&apos; related office/division, therefore you can&apos;t make changes to the event.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_PendingLikelyUnlikelyDraftStatus</fullName>
        <active>true</active>
        <description>Event status can only move to certain values after pending likely or pending unlikely status.</description>
        <errorConditionFormula>OR(
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Pending Likely&quot;),
    ISPICKVAL(Status__c, &quot;Flash Complete&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Pending Likely&quot;),
    ISPICKVAL(Status__c, &quot;Postponed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Pending Likely&quot;),
    ISPICKVAL(Status__c, &quot;Cancelled&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Pending Likely&quot;),
    ISPICKVAL(Status__c, &quot;Inactive&quot;))


)

&amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c ||

OR(
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Pending Unlikely&quot;),
    ISPICKVAL(Status__c, &quot;Flash Complete&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Pending Unlikely&quot;),
    ISPICKVAL(Status__c, &quot;Postponed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Pending Unlikely&quot;),
    ISPICKVAL(Status__c, &quot;Cancelled&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Pending Unlikely&quot;),
    ISPICKVAL(Status__c, &quot;Inactive&quot;))


)

&amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>If event status is pending likely or pending unlikely, status can only move to draft, pending likely, pending unlikely, confirmed, artist passed, or lne passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_PostponedDraftStatus</fullName>
        <active>true</active>
        <description>Event status can only move to certain values after postponed status.</description>
        <errorConditionFormula>OR(
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Postponed&quot;),
NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Postponed&quot;),
NOT(ISPICKVAL(Status__c, &quot;Postponed&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Postponed&quot;),
NOT(ISPICKVAL(Status__c, &quot;Draft&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Postponed&quot;),
NOT(ISPICKVAL(Status__c, &quot;Pending Unlikely&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Postponed&quot;),
NOT(ISPICKVAL(Status__c, &quot;Pending Likely&quot;)),

AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Postponed&quot;),
NOT(ISPICKVAL(Status__c, &quot;Confirmed&quot;))




)))))))
&amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Event status can only move to: Draft, Pending Unlikely, Pending Likely, Confirmed or Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_RentalBuildOptionOneWay</fullName>
        <active>true</active>
        <description>Rental Build Option may only be changed from Build as a Promoted Show to Build Using Rental Accounts, not vice versa.</description>
        <errorConditionFormula>ISCHANGED(RentalBuildOption__c) &amp;&amp;
ISPICKVAL(RentalBuildOption__c, &quot;Build as a Promoted Show&quot;) &amp;&amp;
ISPICKVAL(PRIORVALUE(RentalBuildOption__c), &quot;Build Using Rental Accounts&quot;)</errorConditionFormula>
        <errorDisplayField>RentalBuildOption__c</errorDisplayField>
        <errorMessage>You may not change the Rental Build Option from Build Using Rental Accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_RequireStartTimeOnConfirmed</fullName>
        <active>true</active>
        <description>Require a start time to be set prior to moving to confirmed status</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &quot;Confirmed&quot;) &amp;&amp;
!EventStartTimeEntered__c</errorConditionFormula>
        <errorMessage>A start time must be set within the Event Dates/Times section prior to moving to a confirmed status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_UsingTicketFeed</fullName>
        <active>true</active>
        <description>Only system administrators can disable &apos;Using Ticket Feed&apos; checkbox</description>
        <errorConditionFormula>PRIORVALUE(UsingTicketFeed__c) = TRUE &amp;&amp;
UsingTicketFeed__c = FALSE &amp;&amp;
!$Setup.GeneralSettings__c.GlobalDataAdministrator__c &amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>UsingTicketFeed__c</errorDisplayField>
        <errorMessage>Only system administrators can disable &apos;Using Ticket Feed&apos; checkbox</errorMessage>
    </validationRules>
</CustomObject>